CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

Version 1.5.1
-----------------------------------------------------------------------
+ Added error check to mysql.php file to prevent over valued CHARs
+ Fixed bug #1708507. Extra string character.
+ Database - bug #1713219 - Added auto detect parameter to insert
             function in saveObject

Version 1.5.0
-----------------------------------------------------------------------
1 May 2007
+ Globaled the branch object in case needed
+ Fixed: File Cabinet was not properly converting branch installations
+ Core.php
  o changed version.php call to use copy in config/core/. Was
    breaking branch.
  o update now copies version.php file locally.

+ DBPager - single pages returned properly now.

30 April 2007
+ Rewrote file cabinet conversion to work with new version. Also included
  phatfile instruction.
+ Added slight error check to Database class
+ Added missing DBPager page listing for pages under the limit
+ Added information to Cache.txt on removing a specific key
+ Added filters.txt documentation
+ Fixed setup's permission help file link.
+ Fixed setup's hardcoded version strings
+ Updated Cache_Lit, Clipboard, Developer Rules, Forms, Known_Errors,
  README, WYSIWYG, Converting_Modules
+ Removed Related.txt
+ Rewrote welcome.php message#

27 April 2007
+ DBPager - rewrote paging code

24 April 2007
+ RFE 1704305 - Split bb encoding out into filters
+ Updated files: conf/text_settings.php

23 April 2007
+ Added logIfError function to Error class

19 April 2007
+ Added a function to Core to return the full package version.

17 April 2007
+ RFE 1639645 - added setRequired function to Form
+ Core - isPosted can now return the number of repeats

16 April 2007
+ Cookie - changed default time to 0 instead of null
+ Editor - moved FORCE_EDITOR variable to config.php. Changed define
           to a defined check with a default of false.